# spin-experiments

./: .gitignore  Cargo.toml  crt.pem  run-test.sh  rustup-toolchain.toml  spin-pluginify.toml  spin.sig  trigger-line.json
.devcontainer/: devcontainer.json  init.sh
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/component/: Cargo.toml
crates/component/src/: bindings.rs  lib.rs
crates/factor/: Cargo.toml
crates/factor/src/: host.rs  lib.rs  runtime_config.rs
crates/trigger/: Cargo.toml
crates/trigger/src/: factors.rs  lib.rs  main.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
tests/: spin-simple.toml
wit/: data.wit  world.wit
