[workspace]
members = [ "crates/app", 
  "crates/component", "crates/factor", "crates/trigger", "crates/world",
]
resolver = "2"

[workspace.dependencies]
spin-factors-test = { git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-core = { git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-factors = { git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-factors-executor = { git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-locked-app = { git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-resource-table = { git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-app ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-factor-outbound-http ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-factor-outbound-networking ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-factor-wasi ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-factor-key-value ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-factor-variables ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-runtime-config ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-runtime-factors ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}

spin-http ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-telemetry ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}
spin-trigger ={ git = "https://github.com/fermyon/spin", tag = "v3.0.0"}

toml = { version =  "*" }

tokio = { version = "*" }

anyhow = { version = "*" }

wasmtime = { version = "*" }

async-trait = { version = "*" }

tracing = { version = "*" }

clap = { version = "*" }